5338 Bruker kontaktadresse dersom bostedsadresse ikke finnes for anmodning unntak (#1630)
* Henter kontaktadresse dersom bostedsadresse ikke finnes i produsering av anmodning unntak brevet.
Skriver tester.
Oppdaget skriveleif i lagPersonopplysningerUtenKontaktadresse.
Oppdaget skriveleif i lagFødsel.

* Fjerner logging